[package]
name = "mariam-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.44", features = ["formatting"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
toml = "0.9.11"
tracing = "0.1.44"
tracing-subscriber = "0.3"
vl53l1x-uld = "2.0.1"

[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22.1", features = ["hal"] }
